@@ -4,6 +4,10 @@ Development Progress	:
 ---------------------------
 
 2011-07-25 (SVN):
+    * hexen2/sys_win.c, hexenworld/client/sys_win.c: Replaced most of the
+      crt calls by windows api calls. Clean up and tidy up.
+
+2011-07-25 (SVN):
     * sys_win.c: Removed commented out macro.
 
 2011-07-25 (SVN):
